--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -12,13 +12,11 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="182dp"
-        android:layout_marginEnd="98dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginBottom="571dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="112dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginRight="88dp"
         android:ems="10"
         android:hint="Enter Full name"
         android:inputType="textPersonName" />
@@ -27,16 +25,16 @@
         android:id="@+id/etNewPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="97dp"
-        android:layout_marginLeft="97dp"
-        android:layout_marginEnd="101dp"
-        android:layout_marginRight="101dp"
-        android:layout_marginBottom="513dp"
+        android:layout_below="@+id/etNewName"
+        android:layout_alignStart="@+id/etNewName"
+        android:layout_alignLeft="@+id/etNewName"
+        android:layout_alignEnd="@+id/etNewName"
+        android:layout_alignRight="@+id/etNewName"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
         android:ems="10"
         android:hint="Enter Password"
         android:inputType="textPassword" />
@@ -45,33 +43,33 @@
         android:id="@+id/etNewEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
-        android:layout_marginEnd="98dp"
-        android:layout_marginRight="98dp"
-        android:layout_marginBottom="450dp"
+        android:layout_below="@+id/etNewPassword"
+        android:layout_alignStart="@+id/etNewPassword"
+        android:layout_alignLeft="@+id/etNewPassword"
+        android:layout_alignEnd="@+id/etNewPassword"
+        android:layout_alignRight="@+id/etNewPassword"
+        android:layout_marginStart="-2dp"
+        android:layout_marginLeft="-2dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textEmailAddress" />
 
     <Button
         android:id="@+id/btnNewRegister"
-        android:layout_width="122dp"
+        android:layout_width="182dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="144dp"
-        android:layout_marginLeft="144dp"
-        android:layout_marginEnd="147dp"
-        android:layout_marginRight="147dp"
-        android:layout_marginBottom="374dp"
+        android:layout_below="@+id/etNewEmail"
+        android:layout_alignStart="@+id/etNewEmail"
+        android:layout_alignLeft="@+id/etNewEmail"
+        android:layout_alignEnd="@+id/etNewEmail"
+        android:layout_alignRight="@+id/etNewEmail"
+        android:layout_marginStart="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
         android:text="Register" />
 </RelativeLayout>
