--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -21,12 +22,14 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="67dp"
         android:layout_marginLeft="67dp"
-        android:layout_marginTop="243dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="70dp"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         tools:layout_editor_absoluteX="79dp"
         tools:layout_editor_absoluteY="41dp" />
 
@@ -47,6 +50,8 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         tools:layout_editor_absoluteX="79dp"
         tools:layout_editor_absoluteY="111dp" />
 
