--- a/app/src/main/res/layout/display_info.xml
+++ b/app/src/main/res/layout/display_info.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
-    <EditText
-        android:id="@+id/textViewName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginRight="37dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
+   <TextView
+       android:id="@+id/textViewName"
+       android:layout_width="387dp"
+       android:layout_height="428dp"
+       android:layout_alignParentStart="true"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentTop="true"
+       android:layout_alignParentEnd="true"
+       android:layout_alignParentRight="true"
+       android:layout_alignParentBottom="true"
+       android:layout_marginStart="4dp"
+       android:layout_marginLeft="4dp"
+       android:layout_marginTop="129dp"
+       android:layout_marginEnd="20dp"
+       android:layout_marginRight="20dp"
+       android:layout_marginBottom="174dp"
+       android:ems="10"
+       android:textColor="@color/white"
+       android:textColorHint="@color/white" />
 </RelativeLayout>
