--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#ffffff</color>
     <color name="BlueDark">#333399</color>
     <color name="Red">#ed7864</color>
+    <color name="Black">#000000</color>
 </resources>
